--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/styled-components": "^5.1.25",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
