--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "name": "rello",
     "version": "1.0.0",
     "private": false,
+    "homepage": "https://songforthemute.github.io/rello",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^12.0.0",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/styled-components": "^5.1.25",
+        "gh-pages": "^4.0.0",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
@@ -21,8 +23,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
