--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "rello",
     "version": "1.0.0",
     "private": false,
-    "homepage": "https://songforthemute.github.io/rello",
+    "homepage": "https://tsrello.netlify.app",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^12.0.0",
